slight change in title

--- a/frontend/src/app/reset-password/reset-password.component.html
+++ b/frontend/src/app/reset-password/reset-password.component.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<h1 class="title">Study Buddies</h1>
+<h1 class="title">Buddy Board</h1>
 
 <!-- Main Content -->
 <div class="container">
