--- a/frontend/src/app/signin/signin.component.html
+++ b/frontend/src/app/signin/signin.component.html
@@ -46,13 +46,13 @@
             "
             placeholder="Password"n
           />
-          <button
+          <!-- <button
             type="button"
             class="eye-icon"
             (click)="togglePasswordVisibility()"
           >
             {{ showPassword ? "👁️" : "👁️‍🗨️" }}
-          </button>
+          </button> -->
         </div>
         <div
           class="invalid-feedback"
