--- a/frontend/src/app/deck-details/deck-details.component.html
+++ b/frontend/src/app/deck-details/deck-details.component.html
@@ -4,7 +4,7 @@
     <h1>Buddy Board</h1>
     <nav>
       @if(userRole==='admin'){
-      <a routerLink="/deckPage">Decks</a>
+      <a routerLink="/deckPage"class="active">Decks</a>
       <a routerLink="/userSearch">Users</a>
       }@else{
       <a routerLink="/dashboard">Feed</a>
