--- a/frontend/src/app/deck-page/deck-page.component.html
+++ b/frontend/src/app/deck-page/deck-page.component.html
@@ -23,7 +23,7 @@
   <main>
     <section class="deck-section">
       <div class="deck-section-header">
-        <h2>My Public Decks ({{ publicDecks.length }})</h2>
+        <h2>Public Decks ({{ publicDecks.length }})</h2>
         <button class="deck-button" (click)="toggleOverlay()">
           Deck <span class="circle">+</span>
         </button>
