--- a/frontend/src/app/favorite-deck/favorite-deck.component.html
+++ b/frontend/src/app/favorite-deck/favorite-deck.component.html
@@ -11,7 +11,7 @@
     <br><br>
     <main>
       <section class="deck-section">
-        <h2>My Favorite Decks </h2>
+        <h2>Favorite Decks </h2>
         <br><br>
         <div class="decks">
           <div class="deck" *ngFor="let deck of favoriteDecks" >
