--- a/frontend/src/app/create-deck/create-deck.component.css
+++ b/frontend/src/app/create-deck/create-deck.component.css
@@ -37,9 +37,9 @@
   width: 30px;
   line-height: 30px;
   height: 30px;
-  color: rgb(21, 182, 236);
+  color: rgb(0, 0, 0);
   text-align: center;
-  background-color: green;
+  background-color: rgb(255, 0, 0);
   top: 0;
   cursor: pointer;
 }
@@ -61,8 +61,8 @@ textarea {
   width: 90%;
   padding: 8px;
   margin-bottom: 5px;
-  border: 1px solid black;
-  border-radius: 4px;
+  border: 2px solid black;
+  border-radius: 0px;
   font-size: 1.25rem;
   color: blue;
   font-family: 'Papyrus', 'Arial', sans-serif;
@@ -96,11 +96,15 @@ small {
 }
 
 .submit {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  border: 2px solid black;
   background-color: rgb(21, 182, 236);
 }
 
 .cancel {
-  background-color: red;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  border: 2px solid black;
+  background-color: rgb(255, 0, 0);
 }
 
 .action-buttons button:hover {
@@ -118,7 +122,7 @@ small {
   padding: 10px;
   border-radius: 5px;
   background-color: #e0f7e9;
-  color: #2e7d32;
+  color: #0ce91f;
   font-family: 'Papyrus', 'Arial', sans-serif;
 }
 
