--- a/frontend/src/app/deck-page/deck-page.component.html
+++ b/frontend/src/app/deck-page/deck-page.component.html
@@ -85,9 +85,12 @@
             </div>
           </a>
           <p class="deck-title">{{ item.title }}</p>
+          
           <p class="deck-author">
-            By {{ item.created_by }}
+            <span class="by-text">By</span>
+            <span class="author-name">{{ item.created_by }}</span>
           </p>
+          
           <p class="deck-author">
             <span class="heart">❤️</span>
             {{ item.favorites ? item.favorites.length : 0 }}
