--- a/frontend/src/app/deck-search/deck-search.component.css
+++ b/frontend/src/app/deck-search/deck-search.component.css
@@ -277,8 +277,9 @@ footer p {
 }
 .reset-button {
   background-color: #f44336; /* Red background */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
   color: white;
-  border: 1px solid black;
+  border: 2px solid black;
   padding: 8px 16px;
   font-size: 14px;
   cursor: pointer;
