--- a/frontend/src/app/signin/signin.component.html
+++ b/frontend/src/app/signin/signin.component.html
@@ -46,13 +46,15 @@
             "
             placeholder="Password"n
           />
-          <!-- <button
-            type="button"
-            class="eye-icon"
-            (click)="togglePasswordVisibility()"
-          >
-            {{ showPassword ? "👁️" : "👁️‍🗨️" }}
-          </button> -->
+          <button
+          type="button"
+          class="btn eye-icon"
+          (click)="togglePasswordVisibility()"
+          aria-label="Toggle Password Visibility"
+        >
+          <i class="{{ showPassword ? 'fas fa-eye' : 'fas fa-eye-slash' }}"></i>
+        </button>
+        
         </div>
         <div
           class="invalid-feedback"
