--- a/frontend/src/app/reset-password/reset-password.component.html
+++ b/frontend/src/app/reset-password/reset-password.component.html
@@ -8,19 +8,26 @@
       Just one last step,<br />Confirm your new password<br />and you can now
       login with<br />the new one
     </p>
-    <form>
+    <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
       <label for="password">Password</label>
-      <input type="password" id="password" name="password" required />
+      <input
+        type="password"
+        id="password"
+        formControlName="password"
+        required
+      />
 
       <label for="confirm-password">Confirm Password</label>
       <input
         type="password"
         id="confirm-password"
-        name="confirm-password"
+        formControlName="confirmPassword"
         required
       />
 
-      <button type="submit" class="button">Reset</button>
+      <button type="submit" class="button" [disabled]="resetPasswordForm.invalid">
+        Reset
+      </button>
     </form>
     <a href="/signin" class="link">Go back to Sign in</a>
   </div>
