--- a/frontend/src/app/user-profile/user-profile.component.html
+++ b/frontend/src/app/user-profile/user-profile.component.html
@@ -2,8 +2,8 @@
   <header>
     <h1>Buddy Board</h1>
     <nav>
-      <a routerLink="/deckPage" class="active">Decks</a>
-      <a routerLink="/userSearch">Users</a>
+      <a routerLink="/deckPage" >Decks</a>
+      <a routerLink="/userSearch" class="active">Users</a>
       <a routerLink="/signin">Logout</a>
     </nav>
   </header>
