--- a/frontend/src/app/user-search/user-search.component.html
+++ b/frontend/src/app/user-search/user-search.component.html
@@ -5,7 +5,7 @@
       <nav>
         <a routerLink="/deckPage">Decks</a>
         <a routerLink="/userSearch" class="active">Users</a>
-        <a routerLink="/logout">Logout</a>
+        <a routerLink="/signin">Logout</a>
       </nav>
     </header>
   
