--- a/frontend/src/app/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/forgot-password/forgot-password.component.html
@@ -19,6 +19,7 @@
         />
       </div>
       <button type="submit" class="submit-button">Submit</button>
+      <div class="loader" *ngIf="isLoading">Loading...</div>
     </form>
     <div class="message" *ngIf="message">{{ message }}</div>
     <div class="form-section">
@@ -26,6 +27,6 @@
     </div>
   </div>
   <footer class="footer">
-    Footer. Study Buddies. All rights reserved. 2024
+    Footer. Buddy Board. All rights reserved. 2024
   </footer>
 </div>
