--- a/frontend/src/app/forgot-password/forgot-password.component.css
+++ b/frontend/src/app/forgot-password/forgot-password.component.css
@@ -23,9 +23,9 @@ body {
   text-align: center;
 }
 #para {
-  font-size: larger;
   font-weight: bold;
   margin-bottom: 2rem;
+  font-family:"Papyrus", fantasy;
 }
 
 .container {
@@ -108,7 +108,10 @@ body {
 .submit-button:hover {
   background-color: #005ce6;
 }
-
+.message{
+  color:red;
+  font-weight: bold;
+}
 .form-section {
   font-size: 0.85rem;
   margin-top: 20px;
@@ -151,13 +154,15 @@ form label {
   bottom: 0;
   left: 0;
 }
-
 .invalid-feedback {
   color: red;
   font-size: 0.8rem;
   margin-top: 5px;
 }
-
+.loader{
+  color:black;
+  font-weight: bold;
+}
 .alert {
   margin-top: 15px;
   padding: 10px;
