--- a/frontend/src/app/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/forgot-password/forgot-password.component.html
@@ -27,6 +27,6 @@
     </div>
   </div>
   <footer class="footer">
-    Footer. Buddy Board. All rights reserved. 2024
+   Buddy Board. All rights reserved. 2024
   </footer>
 </div>
