--- a/frontend/src/app/reset-password/reset-password.component.css
+++ b/frontend/src/app/reset-password/reset-password.component.css
@@ -60,6 +60,7 @@ body {
   text-decoration: none;
   font-family: "Papyrus", fantasy;
 }
+
 label {
   font-size: 1rem;
   color: #333;
@@ -69,6 +70,7 @@ label {
   text-align: left;
   font-family: "Papyrus", fantasy;
 }
+
 .reset-box form {
   text-align: left;
   display: flex;
@@ -123,4 +125,24 @@ label {
   position: fixed;
   bottom: 0;
   left: 0;
+}
+
+.password-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.password-container input {
+  flex: 1;
+}
+
+.toggle-visibility {
+  position: absolute;
+  right: 5px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  outline: none;
 }
