--- a/frontend/src/app/reset-password/reset-password.component.html
+++ b/frontend/src/app/reset-password/reset-password.component.html
@@ -87,6 +87,11 @@
         <span *ngIf="!loading">Reset</span>
         <span *ngIf="loading">Resetting...</span>
       </button>
+
+      <div class="success-message" *ngIf="message">
+        {{ message }}
+      </div>
+      
     </form>
     <a href="/signin" class="link" [class.disabled]="loading">Go back to Sign in</a>
   </div>
