login removed as signin exist & html changes

--- a/frontend/src/app/signin/signin.component.html
+++ b/frontend/src/app/signin/signin.component.html
@@ -80,7 +80,7 @@
       </button>
 
       <div class="form-section">
-        <p><a href="/forgot-password">Forgot Password</a>.</p>
+        <p><a href="/forgot-password">Forgot Password</a>?</p>
       </div>
 
       <!-- Sign In Link -->
