minor name error

--- a/frontend/src/app/public-deck/public-deck.component.html
+++ b/frontend/src/app/public-deck/public-deck.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <header>
-      <h1>Study Buddies</h1>
+      <h1>Buddy Board</h1>
       <nav>
         <a routerLink="/dashboard">Feed</a>
         <a routerLink="/cardpage">Cards</a>
@@ -34,6 +34,6 @@
     </main>
     <hr class="divider">
     <footer>
-      <p><b>Study Buddies, All rights reserved, 2024</b></p>
+      <p><b>BuddyBoard, All rights reserved, 2024</b></p>
     </footer>
   </div>
